--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Siroop SearchAdmin</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+    <title>Svenska Verb</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 
     <base href="<%= webpackConfig.metadata.baseUrl %>">
 </head>
