--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Svenska Verb</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="<%= webpackConfig.metadata.baseUrl %>">
 </head>
 
