--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,18 @@
 <!-- Webpack Dev Server reload -->
 <script src="http://<%= webpackConfig.metadata.host %>:<%= webpackConfig.metadata.port %>/webpack-dev-server.js"></script>
 <% } %>
+<% if (webpackConfig.metadata.ENV === 'production') { %>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-16449536-7', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<% } %>
 </body>
 
 </html>
